src/tests/snapshots/lovely__tests__compiler_tests@scoping.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/scoping.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 52,
            },
            kind: VariableDecl {
                name: "y",
                value: Expression {
                    span: Span {
                        start: 5,
                        end: 52,
                    },
                    kind: Block(
                        [
                            Expression {
                                span: Span {
                                    start: 9,
                                    end: 41,
                                },
                                kind: VariableDecl {
                                    name: "x",
                                    value: Expression {
                                        span: Span {
                                            start: 14,
                                            end: 41,
                                        },
                                        kind: Block(
                                            [
                                                Expression {
                                                    span: Span {
                                                        start: 20,
                                                        end: 26,
                                                    },
                                                    kind: VariableDecl {
                                                        name: "x",
                                                        value: Expression {
                                                            span: Span {
                                                                start: 25,
                                                                end: 26,
                                                            },
                                                            kind: IntLiteral(
                                                                7,
                                                            ),
                                                        },
                                                        mutable: false,
                                                        ty: None,
                                                    },
                                                },
                                                Expression {
                                                    span: Span {
                                                        start: 31,
                                                        end: 37,
                                                    },
                                                    kind: Infix {
                                                        left: Expression {
                                                            span: Span {
                                                                start: 31,
                                                                end: 32,
                                                            },
                                                            kind: Ident(
                                                                "x",
                                                            ),
                                                        },
                                                        operator: Minus,
                                                        right: Expression {
                                                            span: Span {
                                                                start: 35,
                                                                end: 37,
                                                            },
                                                            kind: IntLiteral(
                                                                23,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                    },
                                    mutable: false,
                                    ty: None,
                                },
                            },
                            Expression {
                                span: Span {
                                    start: 44,
                                    end: 50,
                                },
                                kind: Infix {
                                    left: Expression {
                                        span: Span {
                                            start: 44,
                                            end: 45,
                                        },
                                        kind: Ident(
                                            "x",
                                        ),
                                    },
                                    operator: Plus,
                                    right: Expression {
                                        span: Span {
                                            start: 48,
                                            end: 50,
                                        },
                                        kind: IntLiteral(
                                            50,
                                        ),
                                    },
                                },
                            },
                        ],
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 54,
                end: 59,
            },
            kind: Infix {
                left: Expression {
                    span: Span {
                        start: 54,
                        end: 55,
                    },
                    kind: Ident(
                        "y",
                    ),
                },
                operator: Minus,
                right: Expression {
                    span: Span {
                        start: 58,
                        end: 59,
                    },
                    kind: IntLiteral(
                        2,
                    ),
                },
            },
        },
    ],
)
