src/tests/snapshots/lovely__tests__compiler_tests@scoping.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/scoping.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "y",
                value: CheckedExpression {
                    type_id: 0,
                    data: Block(
                        [
                            CheckedExpression {
                                type_id: 2,
                                data: VariableDecl {
                                    name: "x",
                                    value: CheckedExpression {
                                        type_id: 0,
                                        data: Block(
                                            [
                                                CheckedExpression {
                                                    type_id: 2,
                                                    data: VariableDecl {
                                                        name: "x",
                                                        value: CheckedExpression {
                                                            type_id: 0,
                                                            data: IntLiteral(
                                                                7,
                                                            ),
                                                        },
                                                        mutable: false,
                                                        variable_id: 0,
                                                    },
                                                },
                                                CheckedExpression {
                                                    type_id: 0,
                                                    data: Infix {
                                                        left: CheckedExpression {
                                                            type_id: 0,
                                                            data: Ident {
                                                                name: "x",
                                                                variable_id: 0,
                                                            },
                                                        },
                                                        operator: Minus,
                                                        right: CheckedExpression {
                                                            type_id: 0,
                                                            data: IntLiteral(
                                                                23,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                    },
                                    mutable: false,
                                    variable_id: 1,
                                },
                            },
                            CheckedExpression {
                                type_id: 0,
                                data: Infix {
                                    left: CheckedExpression {
                                        type_id: 0,
                                        data: Ident {
                                            name: "x",
                                            variable_id: 1,
                                        },
                                    },
                                    operator: Plus,
                                    right: CheckedExpression {
                                        type_id: 0,
                                        data: IntLiteral(
                                            50,
                                        ),
                                    },
                                },
                            },
                        ],
                    ),
                },
                mutable: false,
                variable_id: 2,
            },
        },
        CheckedExpression {
            type_id: 0,
            data: Infix {
                left: CheckedExpression {
                    type_id: 0,
                    data: Ident {
                        name: "y",
                        variable_id: 2,
                    },
                },
                operator: Minus,
                right: CheckedExpression {
                    type_id: 0,
                    data: IntLiteral(
                        2,
                    ),
                },
            },
        },
    ],
}
