src/tests/snapshots/lovely__tests__snapshot_tests-3.snap
---
source: src/tests/mod.rs
description: src/tests/cases/00_bare_minimum
expression: asm
---
bits 64
global _start

section .rodata

  main#0: dq FUN#0


section .text

_start:
  ; goto FUN#0
  jmp FUN#0


FUN#0:
  enter 0, 0

  ; exit unit
  mov rax, 60
  mov rdi, 0
  syscall
