src/tests/snapshots/lovely__tests__snapshot_tests.snap
---
source: src/tests/mod.rs
description: src/tests/cases/02_conditional
expression: asm
---
bits 64
global _start

section .rodata

  main#0: dq FUN#0


section .text

_start:
  ; goto FUN#0
  jmp FUN#0


FUN#0:
  enter 0, 0

  ; t4 := !false
  mov rax, 0
  cmp rax, 0
  sete al
  movzx eax, al
  push qword rax

  ; create t3 and if not t4 then goto label#1
  sub rsp, 8
  mov rax, [rbp - 8]
  cmp rax, 0
  je label#1

  ; t3 := 0
  mov [rbp - 16], 0

  ; goto label#2
  jmp label#2

  ; label label#1
label#1:

  ; t3 := 1
  mov [rbp - 16], 1

  ; label label#2
label#2:

  ; exit t3
  mov rax, 60
  mov rdi, [rbp - 16]
  syscall
